[package]
name = "ania_memory"
version = "1.5.1"
edition = "2024"
description = "Pretty basic memory library for linux using procfs & libc with toggleable random delay between reads. Still in testing, if you have issues, contact me on discord: mwmwmwmwmwwwmwmwmwmw"
license = "MIT OR Apache-2.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "examples/**/*",
    "benches/**/*",   # remove if you don't want benchmarks published
]

[dependencies]
atomic = "0.6.1"
libc = "0.2.184"
procfs = "0.18.0"
rand = "0.10.0"

